syntax = "proto3";

package settings.profile.name.request;

message BothNames {
  string first_name = 2;
  string last_name = 3;
}

message Request {
  oneof request_field {
    string first_name = 1;
    string last_name = 2;
    BothNames both_names = 3;
  }
}
